crates/vouched/tests/ui/vouched/error_visibility_leak.rs
use vouched::Vouched;

#[derive(Vouched)]
#[vouched(error(vis = pub(crate), name = PublicNameError), len(1..))]
pub struct PublicName(String);

fn main() {}
